create layout for the starting quiz screen

--- a/index.html
+++ b/index.html
@@ -8,6 +8,23 @@
   <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
+  <header class="header">
+    <section>
+      <a href="/highscores.html">View Highscores</a>
+    </section>
+    <section>
+      <p>Time: <span id="time">0</span></p>
+    </section>
+  </header>
+  <main>
+    <section class="quiz-intro">
+      <h1>Coding Quiz Challenge</h1>
+      <p>Try to answer the following code-related questions within the time limit. Keep in mind that incorrect answers will penalize your scoretime by ten seconds!</p>
+      <div>
+        <button id="startBtn">Start Quiz</button>
+      </div>
+    </section>
+  </main>
   <script type="module" src="./assets/js/script.js"></script>
 </body>
 </html>
