start the quiz timer and stop when it hits 0

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <a href="/highscores.html">View Highscores</a>
     </section>
     <section>
-      <p>Time: <span id="time">0</span></p>
+      <p>Time: <span id="timer">0</span></p>
     </section>
   </header>
   <main>
