show each question and respond with either correct or wrong when the user clicks an answer

--- a/index.html
+++ b/index.html
@@ -24,6 +24,13 @@
         <button id="startBtn">Start Quiz</button>
       </div>
     </section>
+    <section class="quiz">
+        <section class="quiz-content hidden"></section>
+        <section class="feedback hidden">
+          <div></div>
+          <p>asdasdsa</p>
+        </section>
+    </section>
   </main>
   <script type="module" src="./assets/js/script.js"></script>
 </body>
