show the quiz results and save the user's score to local storage

--- a/index.html
+++ b/index.html
@@ -31,6 +31,17 @@
           <p>asdasdsa</p>
         </section>
     </section>
+    <section class="quiz-results hidden">
+      <h2>All Done!</h2>
+      <p>Your final score is <span id="score"></span></p>
+      <form>
+        <div class="input-container">
+          <label for="initials">Enter your initials</label>
+          <input id="" id="initials" name="initials" type="" text />
+          <button type="submit">Submit</button>
+        </div>
+      </form>
+    </section>
   </main>
   <script type="module" src="./assets/js/script.js"></script>
 </body>
