create the high scores page with the high scores ordered from highest to lowest

--- a/highscores.html
+++ b/highscores.html
@@ -4,8 +4,21 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Code Quiz | Highscores</title>
+  <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
-   <h1>High Scores</h1>
+  <main>
+    <section class="highscores-container">
+      <h1>Highscores</h1>
+      <section>
+        <ul class="highscores"></ul>
+      </section>
+      <div class="btns-container">
+        <button id="back">Go Back</button>
+        <button id="clear">Clear Highscores</button>
+      </div>
+    </section>
+  </main>
+  <script type="module" src="./assets/js/highscore.js"></script>
 </body>
 </html>
