--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <section class="quiz-content hidden"></section>
         <section class="feedback hidden">
           <div></div>
-          <p>asdasdsa</p>
+          <p></p>
         </section>
     </section>
     <section class="quiz-results hidden">
@@ -37,7 +37,7 @@
       <form>
         <div class="input-container">
           <label for="initials">Enter your initials</label>
-          <input id="" id="initials" name="initials" type="" text />
+          <input id="initials" name="initials" type="" text />
           <button type="submit">Submit</button>
         </div>
       </form>
