leave comments on highscores.html

--- a/highscores.html
+++ b/highscores.html
@@ -11,12 +11,16 @@
     <section class="highscores-container">
       <h1>Highscores</h1>
       <section>
+        <!--Highscore list will be populated by JavaScript-->
         <ul class="highscores"></ul>
+        <!--Highscore list End-->
       </section>
+      <!--Action Buttons Start-->
       <div class="btns-container">
         <button id="back">Go Back</button>
         <button id="clear">Clear Highscores</button>
       </div>
+      <!--Action Buttons End-->
     </section>
   </main>
   <script type="module" src="./assets/js/highscore.js"></script>
