--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <!-- View Highscores link And Timer Start -->
   <header class="header">
     <section>
-      <a href="/highscores.html">View Highscores</a>
+      <a href="https://ianahart.github.io/highscores.html">View Highscores</a>
     </section>
     <section>
       <p>Time: <span id="timer">0</span></p>
